# RAG-Platform

./: .env.example  .gitignore  EXPERIMENT_HISTORY_INDEX.md  EXPERIMENT_HISTORY_PART_A.md  EXPERIMENT_HISTORY_PART_B_ablation.md  PROJECT.md  README.md  docker-compose.yml
MDS/: FASE1.md  (+3 more)
backend/: README.md  alembic.ini  create_user.py  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  middleware.py
backend/app/api/routes/: documents.py  feedback.py  query.py
backend/app/auth/: __init__.py
backend/app/core/: __init__.py  config.py  exceptions.py  langfuse_client.py  logging.py
backend/app/db/: database.py  models.py  repositories.py
backend/app/db/migrations/: README
backend/app/ingestion/: chunker.py  inngest_functions.py  parser.py
backend/app/rag/: generator.py  hyde.py  pipeline.py  query_transformer.py  reranker.py  retriever.py  usage.py
backend/app/schemas/: documents.py  query.py
backend/tests/: conftest.py  eval_ragas.py  test_auth_api_key.py  test_auth_http.py  test_config.py  test_eval_ragas_config.py  test_health.py  test_middleware.py  test_models.py
backend/tests/eval_results/TestsB_v1/: Zragas_details_baseline_20260705_212652.json  Zragas_details_baseline_20260705_212652.md  Zragas_results_baseline_20260705_212652.json  Zragas_results_baseline_20260705_212652.md  ragas_details_full_20260705_215642.json  (+11 more)
backend/tests/test_api/: test_documents.py  test_feedback.py  test_query.py
backend/tests/test_ingestion/: test_chunker.py  test_embedder.py  test_ingestion_worker.py  test_inngest.py  test_parser.py  test_validator.py
backend/tests/test_rag/: test_generator.py  test_hyde.py  test_pipeline.py  test_query_transformer.py  test_reranker.py  test_retriever.py  test_usage.py
(+65 files in other folders)
