[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-platform-backend"
version = "0.1.0"
description = "Backend API for the RAG platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pydantic-settings",
    "sqlalchemy",
    "slowapi",
    "structlog",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "alembic",
    "httpx",
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
