[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-platform-backend"
version = "0.1.0"
description = "Backend API for the RAG platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets",
    "fastapi",
    "langchain-community>=0.3.0,<0.4.2",
    "langchain-openai",
    "langchain-text-splitters",
    "langfuse",
    "openai",
    "pydantic-settings",
    "pymupdf",
    "psycopg2-binary",
    "python-multipart",
    "qdrant-client",
    "ragas",
    "sentence-transformers",
    "cohere",
    "sqlalchemy",
    "slowapi",
    "structlog",
    "tenacity",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "python-dotenv",
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
